--- a/index.html
+++ b/index.html
@@ -97,6 +97,18 @@
   .empty{text-align:center;padding:60px 20px;color:var(--text3)}
   .empty svg{margin-bottom:12px;opacity:0.4}
   .empty p{font-size:15px}
+  /* ── GRID VIEW ── */
+  .list.grid-view{display:grid;grid-template-columns:repeat(3,1fr);gap:8px}
+  .list.grid-view .sdiv{grid-column:1/-1}
+  .list.grid-view .card{padding:10px;margin-bottom:0}
+  .list.grid-view .card-header{flex-direction:column;gap:6px}
+  .list.grid-view .card-name{font-size:12px;line-height:1.25;display:-webkit-box;-webkit-line-clamp:2;-webkit-box-orient:vertical;overflow:hidden}
+  .list.grid-view .card-beds{font-size:10px;padding:2px 6px;align-self:flex-start}
+  .list.grid-view .card-sub{font-size:10px;margin-top:3px;white-space:nowrap;overflow:hidden;text-overflow:ellipsis}
+  .list.grid-view .card-meta{display:none}
+  .list.grid-view .card::before{width:3px}
+  .list.grid-view .empty{grid-column:1/-1}
+  .icon-btn.active-view{background:var(--accent);color:#fff;border-color:var(--accent)}
   ::-webkit-scrollbar{width:4px}::-webkit-scrollbar-track{background:transparent}::-webkit-scrollbar-thumb{background:var(--border);border-radius:4px}
 </style>
 </head>
@@ -105,6 +117,7 @@
   <div class="header-top">
     <div><h1>Properties</h1><span class="count" id="countLabel"></span></div>
     <div style="display:flex;gap:8px">
+      <button class="icon-btn" id="viewToggle" title="Toggle view"><svg id="viewIcon" width="18" height="18" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"><rect x="3" y="3" width="5" height="5" rx="1"/><rect x="10" y="3" width="5" height="5" rx="1"/><rect x="3" y="10" width="5" height="5" rx="1"/><rect x="10" y="10" width="5" height="5" rx="1"/></svg></button>
       <button class="icon-btn" id="exportBtn" title="Export"><svg width="18" height="18" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"><path d="M3 15h12M9 3v9M5 8l4 4 4-4"/></svg></button>
     </div>
   </div>
@@ -168,7 +181,7 @@ const FIELDS=[
 ];
 const SECS={info:'Property Info',location:'Location',details:'Details',access:'Access Codes',wifi:'Wi-Fi',amenities:'Amenities',links:'Links'};
 
-let props=[],curFilter='all',query='',editId=null,editing=false;
+let props=[],curFilter='all',query='',editId=null,editing=false,viewMode='list';
 
 function init(){ load(); render(); bind(); }
 
@@ -204,6 +217,9 @@ function render(){
   const list=getList(), el=document.getElementById('propertyList');
   const cur=list.filter(p=>p.status==='current'), past=list.filter(p=>p.status==='past');
   document.getElementById('countLabel').textContent=list.length+' propert'+(list.length===1?'y':'ies');
+
+  // Apply view mode class
+  el.classList.toggle('grid-view', viewMode==='grid');
 
   if(!list.length){ el.innerHTML='<div class="empty"><svg width="48" height="48" fill="none" stroke="currentColor" stroke-width="1.5"><rect x="6" y="10" width="36" height="28" rx="3"/><path d="M6 18h36M18 10v8"/></svg><p>No properties found</p></div>'; return; }
 
@@ -416,6 +432,17 @@ function bind(){
   });
 
   document.getElementById('addBtn').addEventListener('click',addProp);
+
+  // View toggle
+  document.getElementById('viewToggle').addEventListener('click',function(){
+    viewMode = viewMode==='list' ? 'grid' : 'list';
+    this.classList.toggle('active-view', viewMode==='grid');
+    // Swap icon: grid icon when in list mode, list icon when in grid mode
+    document.getElementById('viewIcon').innerHTML = viewMode==='grid'
+      ? '<line x1="3" y1="5" x2="15" y2="5"/><line x1="3" y1="9" x2="15" y2="9"/><line x1="3" y1="13" x2="15" y2="13"/>'
+      : '<rect x="3" y="3" width="5" height="5" rx="1"/><rect x="10" y="3" width="5" height="5" rx="1"/><rect x="3" y="10" width="5" height="5" rx="1"/><rect x="10" y="10" width="5" height="5" rx="1"/>';
+    render();
+  });
   document.getElementById('exportBtn').addEventListener('click',()=>document.getElementById('exportModal').classList.add('open'));
   document.getElementById('exportJSON').addEventListener('click',exportJSON);
   document.getElementById('exportCSV').addEventListener('click',exportCSV);
