--- a/index.html
+++ b/index.html
@@ -98,16 +98,21 @@
   .empty svg{margin-bottom:12px;opacity:0.4}
   .empty p{font-size:15px}
   /* ── GRID VIEW ── */
-  .list.grid-view{display:grid;grid-template-columns:repeat(3,1fr);gap:8px}
-  .list.grid-view .sdiv{grid-column:1/-1}
-  .list.grid-view .card{padding:10px;margin-bottom:0}
-  .list.grid-view .card-header{flex-direction:column;gap:6px}
-  .list.grid-view .card-name{font-size:12px;line-height:1.25;display:-webkit-box;-webkit-line-clamp:2;-webkit-box-orient:vertical;overflow:hidden}
-  .list.grid-view .card-beds{font-size:10px;padding:2px 6px;align-self:flex-start}
-  .list.grid-view .card-sub{font-size:10px;margin-top:3px;white-space:nowrap;overflow:hidden;text-overflow:ellipsis}
-  .list.grid-view .card-meta{display:none}
-  .list.grid-view .card::before{width:3px}
-  .list.grid-view .empty{grid-column:1/-1}
+  .list.grid-2,.list.grid-3{display:grid;gap:8px}
+  .list.grid-2{grid-template-columns:repeat(2,1fr)}
+  .list.grid-3{grid-template-columns:repeat(3,1fr)}
+  .list.grid-2 .sdiv,.list.grid-3 .sdiv{grid-column:1/-1}
+  .list.grid-2 .card,.list.grid-3 .card{padding:10px;margin-bottom:0}
+  .list.grid-2 .card-header,.list.grid-3 .card-header{flex-direction:column;gap:6px}
+  .list.grid-2 .card-name{font-size:14px;line-height:1.25;display:-webkit-box;-webkit-line-clamp:2;-webkit-box-orient:vertical;overflow:hidden}
+  .list.grid-3 .card-name{font-size:12px;line-height:1.25;display:-webkit-box;-webkit-line-clamp:2;-webkit-box-orient:vertical;overflow:hidden}
+  .list.grid-2 .card-beds{font-size:11px;padding:2px 6px;align-self:flex-start}
+  .list.grid-3 .card-beds{font-size:10px;padding:2px 6px;align-self:flex-start}
+  .list.grid-2 .card-sub{font-size:11px;margin-top:3px;white-space:nowrap;overflow:hidden;text-overflow:ellipsis}
+  .list.grid-3 .card-sub{font-size:10px;margin-top:3px;white-space:nowrap;overflow:hidden;text-overflow:ellipsis}
+  .list.grid-2 .card-meta,.list.grid-3 .card-meta{display:none}
+  .list.grid-2 .card::before,.list.grid-3 .card::before{width:3px}
+  .list.grid-2 .empty,.list.grid-3 .empty{grid-column:1/-1}
   .icon-btn.active-view{background:var(--accent);color:#fff;border-color:var(--accent)}
   ::-webkit-scrollbar{width:4px}::-webkit-scrollbar-track{background:transparent}::-webkit-scrollbar-thumb{background:var(--border);border-radius:4px}
 </style>
@@ -219,7 +224,9 @@ function render(){
   document.getElementById('countLabel').textContent=list.length+' propert'+(list.length===1?'y':'ies');
 
   // Apply view mode class
-  el.classList.toggle('grid-view', viewMode==='grid');
+  el.classList.remove('grid-2','grid-3');
+  if(viewMode==='grid2') el.classList.add('grid-2');
+  if(viewMode==='grid3') el.classList.add('grid-3');
 
   if(!list.length){ el.innerHTML='<div class="empty"><svg width="48" height="48" fill="none" stroke="currentColor" stroke-width="1.5"><rect x="6" y="10" width="36" height="28" rx="3"/><path d="M6 18h36M18 10v8"/></svg><p>No properties found</p></div>'; return; }
 
@@ -433,14 +440,17 @@ function bind(){
 
   document.getElementById('addBtn').addEventListener('click',addProp);
 
-  // View toggle
+  // View toggle: list → 2-col → 3-col → list
+  const SVG_LIST='<line x1="3" y1="5" x2="15" y2="5"/><line x1="3" y1="9" x2="15" y2="9"/><line x1="3" y1="13" x2="15" y2="13"/>';
+  const SVG_G2='<rect x="2" y="3" width="6" height="5" rx="1"/><rect x="10" y="3" width="6" height="5" rx="1"/><rect x="2" y="10" width="6" height="5" rx="1"/><rect x="10" y="10" width="6" height="5" rx="1"/>';
+  const SVG_G3='<rect x="1" y="3" width="4" height="4" rx=".7"/><rect x="6" y="3" width="4" height="4" rx=".7"/><rect x="11" y="3" width="4" height="4" rx=".7"/><rect x="1" y="9" width="4" height="4" rx=".7"/><rect x="6" y="9" width="4" height="4" rx=".7"/><rect x="11" y="9" width="4" height="4" rx=".7"/>';
   document.getElementById('viewToggle').addEventListener('click',function(){
-    viewMode = viewMode==='list' ? 'grid' : 'list';
-    this.classList.toggle('active-view', viewMode==='grid');
-    // Swap icon: grid icon when in list mode, list icon when in grid mode
-    document.getElementById('viewIcon').innerHTML = viewMode==='grid'
-      ? '<line x1="3" y1="5" x2="15" y2="5"/><line x1="3" y1="9" x2="15" y2="9"/><line x1="3" y1="13" x2="15" y2="13"/>'
-      : '<rect x="3" y="3" width="5" height="5" rx="1"/><rect x="10" y="3" width="5" height="5" rx="1"/><rect x="3" y="10" width="5" height="5" rx="1"/><rect x="10" y="10" width="5" height="5" rx="1"/>';
+    if(viewMode==='list') viewMode='grid2';
+    else if(viewMode==='grid2') viewMode='grid3';
+    else viewMode='list';
+    this.classList.toggle('active-view', viewMode!=='list');
+    // Show icon for NEXT mode
+    document.getElementById('viewIcon').innerHTML = viewMode==='list'?SVG_G2:viewMode==='grid2'?SVG_G3:SVG_LIST;
     render();
   });
   document.getElementById('exportBtn').addEventListener('click',()=>document.getElementById('exportModal').classList.add('open'));
